# java-tron

./: .augment-guidelines  .gitignore  1.txt  2.txt  3.txt  4.txt  AGENTS.md  CLAUDE.md  Dockerfile.java-tron  Makefile  PROMPT.txt  YOLO_PROMPT.txt  YOLO_PROMPT_INPUT.txt  collect_remote_results.sh  docker-compose.yml  execution-tracking-demo.md  main_net_config.conf  main_net_config_embedded.conf  main_net_config_remote.conf  option-1.md  planning.md  planning.md.2.bak  planning.md.3.bak  planning.md.4.bak  planning.md.bak  todo-1.md  yolo.sh
.augment/rules/: gemini-cli.md
.claude/: hookify.protect-ralph-loop-bash.local.md  hookify.protect-ralph-loop-files.local.md  settings.json
.claude/commands/: PR.md  implement-parity.md  implement-review_again_fix-next.md  implement-review_again_fix.md  ralph-fix.md  ralph-implement.md  ralph-review-impl.md
.cursor/rules/: gemini-cli.mdc  scratchpad.mdc
.github/workflows/: codex-review.yml
conformance/: README.md
conformance/schema/: kv_format.md  metadata_schema.json
docs/: ADR-012-unified-rust-backend.md  REMOTE_EXECUTION_STATE_SYNC_FIX.md  consumption.md  dual-storage-mode.md  optimization-implementation-plan.md  performance-analysis-report.md  performance-testing-phase-summary.md  performance-testing-results.md  poc-implementation-summary.md  storage-spi-design.md  tron-workload-testing.md
framework/: build.gradle
gradle/: verification-metadata.xml
planning/: ACCOUNT_CREATE_CONTRACT.fix.planning.md  ACCOUNT_CREATE_CONTRACT.fix.todo.md  ASSET_ISSUE_CONTRACT.remainning.planning.md  ASSET_ISSUE_CONTRACT.remainning.todo.md  AccountCreateContract.planning.md  AccountCreateContract.todo.md  AccountUpdateContract.planning.md  AccountUpdateContract.todo.md  DELEGATE_RESOURCE_CONTRACT.review.notes.md  DELEGATE_RESOURCE_CONTRACT.review.planning.md  DELEGATE_RESOURCE_CONTRACT.review.todo.md  FreezeBalanceContract.planning.md  FreezeBalanceContract.todo.md  RuntimeSpiImpl.postExecMirror.batchGet.planning.md  RuntimeSpiImpl.postExecMirror.batchGet.todo.md  TEST_FIXES_SUMMARY.md  TransferAssetContract.planning.md  TransferAssetContract.todo.md  VoteWitnessContract-fix-2.planning.md  VoteWitnessContract-fix-2.todo.md  VoteWitnessContract-fix.IMPLEMENTATION_SUMMARY.md  VoteWitnessContract-fix.planning.md  VoteWitnessContract-fix.todo.md  VoteWitnessContract.planning.md  VoteWitnessContract.todo.md  WithdrawBalanceContract.planning.md  WithdrawBalanceContract.todo.md  WitnessUpdateContract.planning.md  WitnessUpdateContract.todo.md  abandon_aext.planning.md  abandon_aext.todo.md  align_conformance-B.planning.md  align_conformance-B.todo.md  asset_issue-review.planning.md  asset_issue-review.todo.md  asset_issue.planning.md  asset_issue.todo.md  bandwidth.todo.md  better_table-2-review.planning.md  better_table-2-review.todo.md  (+93 more)
planning/fixture_edge_case/: AccountFixtureGeneratorTest.java.planning.md  AccountFixtureGeneratorTest.java.todo.md  AssetIssueFixtureGeneratorTest.java.planning.md  (+29 more)
plannning/: pre-state.planning.md  pre-state.todo.md
proto/: backend.proto
rust-backend/: Cargo.toml  Dockerfile  config.toml  debug_fee_issue.rs  test_witness_protobuf.rs
rust-backend/crates/common/: Cargo.toml
rust-backend/crates/common/src/: address.rs  config.rs  error.rs  lib.rs  metrics.rs  module.rs
rust-backend/crates/core/: Cargo.toml  build.rs
rust-backend/crates/core/src/: lib.rs  service.rs  tests.rs
rust-backend/crates/core/src/conformance/: kv_format.rs  metadata.rs  mod.rs  runner.rs
rust-backend/crates/core/src/service/: mod.rs  overlay.rs
rust-backend/crates/core/src/service/contracts/: delegation.rs  exchange.rs  freeze.rs  mod.rs  proposal.rs  proto.rs  withdraw.rs
rust-backend/crates/core/src/service/grpc/: address.rs  aext.rs  conversion.rs  mod.rs
rust-backend/crates/core/src/service/tests/: bandwidth.rs  contracts.rs  helpers.rs  integration.rs  mod.rs  trc10.rs
rust-backend/crates/core/src/service/tests/contracts/: account_create.rs  account_permission_update.rs  account_update.rs  asset_issue.rs  cancel_all_unfreeze_v2.rs  common.rs  contract_parameter.rs  create_smart_contract.rs  delegate_resource.rs  exchange_create.rs  freeze_balance.rs  market_sell_asset.rs  mod.rs  participate_asset_issue.rs  proposal_approve.rs  proposal_delete.rs  set_account_id.rs  transfer.rs  trc10_transfer.rs  undelegate_resource.rs  unfreeze_asset.rs  update_asset.rs  update_energy_limit.rs  update_setting.rs  vote_witness.rs  witness_create.rs  witness_update.rs
rust-backend/crates/execution/: Cargo.toml  build.rs
rust-backend/crates/execution/protos/: tron.proto  witness.proto
rust-backend/crates/execution/src/: lib.rs  storage_adapter.rs  tron_evm.rs
rust-backend/crates/execution/src/delegation/: keys.rs  mod.rs  types.rs
rust-backend/crates/execution/src/precompiles/: mod.rs  system.rs  trc10.rs  trc20.rs
rust-backend/crates/execution/src/resource/: applier.rs  calculator.rs  config.rs  mod.rs  store.rs
rust-backend/crates/execution/src/storage_adapter/: database.rs  db_names.rs  engine.rs  engine_backed.rs  in_memory.rs  inmem.rs  key_helpers.rs  mod.rs  resource.rs  resource_tracker.rs  tests.rs  traits.rs  types.rs  utils.rs  write_buffer.rs
rust-backend/crates/execution/src/storage_adapter/types/: account_aext.rs  freeze.rs  mod.rs  state_change.rs  vote.rs  witness.rs
rust-backend/crates/storage/: Cargo.toml
rust-backend/crates/storage/src/: engine.rs  lib.rs
rust-backend/docs/: FREEZE_BALANCE_PHASE2_SUMMARY.md
rust-backend/planning/: asset_issue-changes.planning.md  asset_issue-changes.todo.md
rust-backend/src/: main.rs
rust-storage-service/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.toml
rust-storage-service/src/: config.rs  main.rs  service.rs  storage.rs
scripts/: README.md  compare_exec_csv.py  execution_csv_compare.py  extract-metrics.sh  run-performance-tests.sh  test_compare_exec_csv.py
state-digest-jni/: Cargo.toml  build.sh
state-digest-jni/src/: lib.rs
yolo/: YOLO_PROMPT.txt  YOLO_PROMPT_INPUT.txt  input.md  yolo.sh
(+3157 files in other folders)
