[package]
name = "tron-storage-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC and Protocol Buffers
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"

# Database engines
rocksdb = "0.21"
# leveldb is not actively maintained in Rust, we'll focus on RocksDB

# Serialization and utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"

# Metrics
prometheus = "0.13"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "storage-service"
path = "src/main.rs" 