[package]
name = "tron-backend-execution"
version = "0.1.0"
edition = "2021"
description = "Execution module for Tron backend - revm-based EVM with Tron extensions"

[dependencies]
# Common crate
tron-backend-common = { path = "../common" }

# EVM engine
revm = "3.5"

# Async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async trait
async-trait = "0.1"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }

# Crypto
sha3 = "0.10"
keccak = "0.1"

[dev-dependencies]
hex = "0.4" 