[package]
name = "tron-backend-execution"
version = "0.1.0"
edition = "2021"
description = "Execution module for Tron backend - revm-based EVM with Tron extensions"

[dependencies]
# Core dependencies
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# REVM dependencies
revm = { version = "14.0", features = ["std", "serde", "arbitrary", "dev"] }
revm-primitives = "10.0"
revm-interpreter = "10.0"
revm-precompile = "11.0"

# Tron-specific dependencies
hex = "0.4"
bytes = "1.0"
primitive-types = "0.12"
ruint = "1.10"
secp256k1 = "0.28"
sha3 = "0.10"
sha2 = "0.10"
bs58 = "0.5"

# Storage adapter dependencies
once_cell = "1.19"
parking_lot = "0.12"

# Protobuf for Java compatibility
prost = "0.12"

# Internal dependencies
tron-backend-common = { path = "../common" }
tron-backend-storage = { path = "../storage" }

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
hex = "0.4" 